force-app/main/default/objects/TradingSchema__mdt/TradingSchema__mdt.object-meta.xml
<CustomObject>
    <description>Addepar Schema for Trading Entities</description>
    <label>Trading Schema</label>
    <pluralLabel>Trading Schemas</pluralLabel>
</CustomObject>