force-app/main/default/objects/TradingSchema__mdt/fields/DecimalPlaces__c.field-meta.xml
<CustomField>
    <fullName>DecimalPlaces__c</fullName>
    <description>Number of digits to the right of the decimal point</description>
    <inlineHelpText>Number of digits to the right of the decimal point</inlineHelpText>
    <label>Decimal Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>