force-app/main/default/objects/TradingSchema__mdt/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <inlineHelpText>The display name for this field</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>