force-app/main/default/objects/TradingSchema__mdt/fields/FieldType__c.field-meta.xml
<CustomField>
    <fullName>FieldType__c</fullName>
    <defaultValue>&quot;String&quot;</defaultValue>
    <inlineHelpText>The field type for this schema mapping</inlineHelpText>
    <label>Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
                <default>true</default>
                <label>Boolean</label>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>External Id</fullName>
            </value>
            <value>
                <fullName>GUID</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Long Text Area</fullName>
            </value>
            <value>
                <fullName>Multi-Select Picklist</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Rich Text Field</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>