force-app/main/default/objects/TradingSchema__mdt/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if this schema mapping is a required field</description>
    <inlineHelpText>Identifies if this schema mapping is a required field</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>