force-app/main/default/objects/TradingSchema__mdt/fields/NumberLength__c.field-meta.xml
<CustomField>
    <fullName>NumberLength__c</fullName>
    <inlineHelpText>Number of digits to the left of the decimal point</inlineHelpText>
    <label>Number Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>