force-app/main/default/objects/TradingSchema__mdt/fields/PicklistValues__c.field-meta.xml
<CustomField>
    <fullName>PicklistValues__c</fullName>
    <description>A comma-separated list of picklist values for a picklist attribute</description>
    <inlineHelpText>A comma-separated list of picklist values for a picklist attribute</inlineHelpText>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>