force-app/main/default/objects/TradingSchema__mdt/fields/TradingField__c.field-meta.xml
<CustomField>
    <fullName>TradingField__c</fullName>
    <label>Trading Field</label>
    <referenceTo>TradingField__mdt</referenceTo>
    <relationshipLabel>Trading Schemas</relationshipLabel>
    <relationshipName>TradingSchemas</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>