force-app/main/default/objects/TradingSchema__mdt/fields/TradingObject__c.field-meta.xml
<CustomField>
    <fullName>TradingObject__c</fullName>
    <label>Trading Object</label>
    <referenceTo>TradingObject__mdt</referenceTo>
    <relationshipLabel>Trading Schemas</relationshipLabel>
    <relationshipName>TradingSchemas</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>