force-app/main/default/objects/TradingSchema__mdt/validationRules/Define_Picklist_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Define_Picklist_Values</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(FieldType__c) == &quot;Picklist&quot;,LEN(PicklistValues__c) &lt; 1)</errorConditionFormula>
    <errorDisplayField>PicklistValues__c</errorDisplayField>
    <errorMessage>Please provide values for the picklist</errorMessage>
</ValidationRule>